--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.7"
 
 services:
-  sample:
+  app:
     container_name: react-dockerize
     build:
       context: .
       dockerfile: Dockerfile
-    volumes:
-      - ".:/app"
+    volumes: # 볼륨이 호스트 디바이스의 디스크 연결해주는 부분.
+      - ".:/app" # 로컬에 있는 파일이랑 컨테이너랑 연결해(동기화)
       - "/app/node_modules"
     ports:
       - "3000:3000"
@@ -15,3 +15,4 @@ services:
       - NODE_ENV=development
     stdin_open: true
     tty: true
+# CI/CD에도 좋다고 하네요 -> 히로쿠
