--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.4.6
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "luminouss-web"
+          heroku_app_name: "luminouss"
           heroku_email: "sangsulee200@gmail.com"
 
       # Runs a single command using the runners shell
