--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "firebase": "^8.0.2",
     "gh-pages": "^3.1.0",
