--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.0",
+    "react-ga": "^3.3.0",
     "react-page-scroller": "^2.0.11-beta",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
